--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "naturalmente-bom-v3",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -12,6 +12,7 @@
   "dependencies": {
     "@babel/preset-react": "^7.24.1",
     "@faker-js/faker": "^8.4.1",
+    "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@testing-library/react": "^15.0.4",
     "class-variance-authority": "^0.7.0",
