--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.24.1",
+    "@capacitor/cli": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
     "@faker-js/faker": "^8.4.1",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -34,6 +36,8 @@
   "devDependencies": {
     "@types/node": "20.12.7",
     "@types/react": "18.2.78",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
