--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ts-jest": "^29.1.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.12.7",
     "@types/react": "18.2.78",
     "eslint-config-prettier": "^9.1.0",
