--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "naturalmente-bom-v3",
-  "version": "1.3.1",
+  "version": "1.7.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -25,6 +25,8 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.23.0",
     "sass": "^1.75.0",
     "tailwind-merge": "^2.3.0",
