--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@testing-library/react": "^15.0.4",
+    "@uploadthing/react": "^6.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.3",
     "lucide-react": "^0.368.0",
@@ -31,7 +33,8 @@
     "sass": "^1.75.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "ts-jest": "^29.1.2"
+    "ts-jest": "^29.1.2",
+    "uploadthing": "^6.12.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
