Refactor form layout for new category page and add image upload functionality

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@/app/api/uploadthing/route": ["./src/app/api/uploadthing/route.ts"]
     }
   }
 }
