--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.23.0",
     "sass": "^1.75.0",
+    "sweetalert2": "^11.11.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.1.2",
